recursion.cons.lessons.recursion.cons.Nfirst.scala.error
nfirst:4: error: type mismatch;
 found   : Int
 required: List[Int]
  } else l.head:::nfirst(l.tail, n-1)
               ^